fixing my own review issues

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -783,6 +783,7 @@
   "repeat": "Повтори",
   "request_burst": "Request BURST",
   "request_processing_time": "Заявете време за обработка",
+  "reset_recipients": "Нулиране на получателите",
   "returning_user_q": "Връщащ се потребител?",
   "reward_recipient": "Награда Получател",
   "same_out": "Същата сума",
