--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -783,6 +783,7 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "request_processing_time": "Temps de processament de sol·licituds",
+  "reset_recipients": "Restablir destinataris",
   "returning_user_q": "Usuari existent?",
   "reward_recipient": "Destinatari de recompensa",
   "same_out": "Mateixa quantitat",
