--- a/web/angular-wallet/src/locales/cs.json
+++ b/web/angular-wallet/src/locales/cs.json
@@ -783,6 +783,7 @@
   "repeat": "Znovu",
   "request_burst": "Request BURST",
   "request_processing_time": "Doba zpracování požadavku",
+  "reset_recipients": "Resetování příjemců",
   "returning_user_q": "Stávající uživatel?",
   "reward_recipient": "Příjemce odměny",
   "same_out": "Stejné množství",
