--- a/web/angular-wallet/src/locales/de-de.json
+++ b/web/angular-wallet/src/locales/de-de.json
@@ -783,6 +783,7 @@
   "repeat": "Wiederholen",
   "request_burst": "Request BURST",
   "request_processing_time": "Bearbeitungszeit anfordern",
+  "reset_recipients": "Empfänger zurücksetzen",
   "returning_user_q": "Konto bereits vorhanden?",
   "reward_recipient": "Belohnungsempfänger",
   "same_out": "Gleicher Betrag",
