--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -783,6 +783,7 @@
   "repeat": "Επανάληψη",
   "request_burst": "Request BURST",
   "request_processing_time": "Ζήτηση χρόνου επεξεργασίας",
+  "reset_recipients": "Επαναφορά παραληπτών",
   "returning_user_q": "Επιστροφή χρήστη;",
   "reward_recipient": "Ανταμοιβή παραλήπτη",
   "same_out": "Ιδιο ποσό",
