--- a/web/angular-wallet/src/locales/es-es.json
+++ b/web/angular-wallet/src/locales/es-es.json
@@ -783,6 +783,7 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "request_processing_time": "Tiempo de procesamiento de solicitud",
+  "reset_recipients": "Restablecer destinatarios",
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Recipiente Recompensa",
   "same_out": "La misma cantidad",
