--- a/web/angular-wallet/src/locales/fi.json
+++ b/web/angular-wallet/src/locales/fi.json
@@ -783,6 +783,7 @@
   "repeat": "Toista",
   "request_burst": "Request BURST",
   "request_processing_time": "Pyydä käsittelyaikaa",
+  "reset_recipients": "Nollaa vastaanottajat",
   "returning_user_q": "Vanha käyttäjä?",
   "reward_recipient": "Palkinnon saaja",
   "same_out": "Sama määrä",
