--- a/web/angular-wallet/src/locales/fr.json
+++ b/web/angular-wallet/src/locales/fr.json
@@ -783,6 +783,7 @@
   "repeat": "Répéter",
   "request_burst": "Request BURST",
   "request_processing_time": "Temps de traitement de la demande",
+  "reset_recipients": "Réinitialiser les destinataires",
   "returning_user_q": "Déjà inscrit ?",
   "reward_recipient": "Récipiendaire de la récompense",
   "same_out": "Même quantité",
