--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -783,6 +783,7 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "request_processing_time": "Tempo de procesamento de solicitudes",
+  "reset_recipients": "Restablecer destinatarios",
   "returning_user_q": "¿Usuario existente?",
   "reward_recipient": "Destinatario de recompensa",
   "same_out": "Mesmo importe",
