--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -783,6 +783,7 @@
   "repeat": "दोहराएँ",
   "request_burst": "Request BURST",
   "request_processing_time": "प्रसंस्करण समय का अनुरोध करें",
+  "reset_recipients": "प्राप्तकर्ता रीसेट करें",
   "returning_user_q": "वापिस आये उपयोगकर्ता (यूजर)?",
   "reward_recipient": "इनाम देने वाला",
   "same_out": "समान राशि",
