--- a/web/angular-wallet/src/locales/hr.json
+++ b/web/angular-wallet/src/locales/hr.json
@@ -783,6 +783,7 @@
   "repeat": "Ponovite",
   "request_burst": "Request BURST",
   "request_processing_time": "Zahtjev za obradu vremena",
+  "reset_recipients": "Poništite primatelje",
   "returning_user_q": "Korisnik povratnik?",
   "reward_recipient": "Nagrađeni primatelj",
   "same_out": "Isti iznos",
