--- a/web/angular-wallet/src/locales/id.json
+++ b/web/angular-wallet/src/locales/id.json
@@ -783,6 +783,7 @@
   "repeat": "Ulangi",
   "request_burst": "Request BURST",
   "request_processing_time": "Permintaan Waktu Pemrosesan",
+  "reset_recipients": "Setel ulang Penerima",
   "returning_user_q": "Kembali pengguna?",
   "reward_recipient": "Penerima Hadiah",
   "same_out": "Sama banyak",
