--- a/web/angular-wallet/src/locales/it.json
+++ b/web/angular-wallet/src/locales/it.json
@@ -783,6 +783,7 @@
   "repeat": "Ripeti",
   "request_burst": "Request BURST",
   "request_processing_time": "Richiedi tempo di elaborazione",
+  "reset_recipients": "Ripristina destinatari",
   "returning_user_q": "Utente già registrato?",
   "reward_recipient": "Ricompensa",
   "same_out": "La stessa quantità",
