--- a/web/angular-wallet/src/locales/ja.json
+++ b/web/angular-wallet/src/locales/ja.json
@@ -783,6 +783,7 @@
   "repeat": "リピート",
   "request_burst": "Request BURST",
   "request_processing_time": "リクエスト処理時間",
+  "reset_recipients": "受信者をリセット",
   "returning_user_q": "以前ご利用になられたユーザーですか",
   "reward_recipient": "報酬受取人",
   "same_out": "同額",
