--- a/web/angular-wallet/src/locales/lt.json
+++ b/web/angular-wallet/src/locales/lt.json
@@ -783,6 +783,7 @@
   "repeat": "Kartoti",
   "request_burst": "Request BURST",
   "request_processing_time": "Prašyti apdorojimo laiko",
+  "reset_recipients": "Iš naujo nustatyti gavėjus",
   "returning_user_q": "Esamas vartotojas?",
   "reward_recipient": "Atlygis Gavėjas",
   "same_out": "Taspats kiekis",
