--- a/web/angular-wallet/src/locales/nl.json
+++ b/web/angular-wallet/src/locales/nl.json
@@ -783,6 +783,7 @@
   "repeat": "Herhaal",
   "request_burst": "Request BURST",
   "request_processing_time": "Verzoek om verwerkingstijd",
+  "reset_recipients": "Ontvangers opnieuw instellen",
   "returning_user_q": "Terugkerende Gebruiker?",
   "reward_recipient": "Beloning Ontvanger",
   "same_out": "Zelfde hoeveelheid",
