--- a/web/angular-wallet/src/locales/pl.json
+++ b/web/angular-wallet/src/locales/pl.json
@@ -792,6 +792,7 @@
   "repeat": "Powtórz",
   "request_burst": "Request BURST",
   "request_processing_time": "Żądaj czasu przetwarzania",
+  "reset_recipients": "Zresetuj odbiorców",
   "returning_user_q": "Powracający użytkownik?",
   "reward_recipient": "Odbiorca nagrody",
   "same_out": "Taka sama ilość",
