--- a/web/angular-wallet/src/locales/pt-br.json
+++ b/web/angular-wallet/src/locales/pt-br.json
@@ -785,6 +785,7 @@
   "repeat": "Repetir",
   "request_burst": "Receber BURST",
   "request_processing_time": "Solicitar Tempo de Processamento",
+  "reset_recipients": "Redefinir beneficiários",
   "returning_user_q": "Já é usuário?",
   "reward_recipient": "Destinatário da recompensa",
   "same_out": "Mesma quantidade",
