--- a/web/angular-wallet/src/locales/pt-pt.json
+++ b/web/angular-wallet/src/locales/pt-pt.json
@@ -783,6 +783,7 @@
   "repeat": "Repetir",
   "request_burst": "Request BURST",
   "request_processing_time": "Solicitar Tempo de Processamento",
+  "reset_recipients": "Redefinir destinatários",
   "returning_user_q": "Usuário Existente?",
   "reward_recipient": "Destinatário da recompensa",
   "same_out": "Mesma quantidade",
