--- a/web/angular-wallet/src/locales/ro.json
+++ b/web/angular-wallet/src/locales/ro.json
@@ -783,6 +783,7 @@
   "repeat": "Repetă",
   "request_burst": "Request BURST",
   "request_processing_time": "Cereți timpul de procesare",
+  "reset_recipients": "Resetați destinatarii",
   "returning_user_q": "Deja înregistrat?",
   "reward_recipient": "Recipient Recompensă",
   "same_out": "Aceeasi suma",
