--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -783,6 +783,7 @@
   "repeat": "Повторить",
   "request_burst": "Request BURST",
   "request_processing_time": "Время обработки запроса",
+  "reset_recipients": "Сбросить получателей",
   "returning_user_q": "Зарегистрированный пользователь?",
   "reward_recipient": "Получатель вознаграждения",
   "same_out": "Такое же количество",
