--- a/web/angular-wallet/src/locales/sh.json
+++ b/web/angular-wallet/src/locales/sh.json
@@ -783,6 +783,7 @@
   "repeat": "Ponovite",
   "request_burst": "Request BURST",
   "request_processing_time": "Zahtjev za obradu vremena",
+  "reset_recipients": "",
   "returning_user_q": "Korisnik povratnik?",
   "reward_recipient": "Reward Recipient",
   "same_out": "Same Amount",
