--- a/web/angular-wallet/src/locales/sk.json
+++ b/web/angular-wallet/src/locales/sk.json
@@ -783,6 +783,7 @@
   "repeat": "Opakovať",
   "request_burst": "Request BURST",
   "request_processing_time": "Čas spracovania požiadavky",
+  "reset_recipients": "Obnoviť príjemcov",
   "returning_user_q": "Opätovný používateľ?",
   "reward_recipient": "Príjemca odmeny",
   "same_out": "Rovnaké množstvo",
