--- a/web/angular-wallet/src/locales/sr-cs.json
+++ b/web/angular-wallet/src/locales/sr-cs.json
@@ -731,6 +731,7 @@
   "remove_from_group": "Izbrišite iz Grupe",
   "repeat": "Ponovite",
   "request_burst": "Request BURST",
+  "reset_recipients": "Ресетујте примаоце",
   "returning_user_q": "Korisnik Povratnik?",
   "same_out": "Исти износ",
   "search_aliases": "Tražite Alias-e...",
