--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -783,6 +783,7 @@
   "repeat": "Поновите",
   "request_burst": "Request BURST",
   "request_processing_time": "Рекуест Процессинг Тиме",
+  "reset_recipients": "Ресетујте примаоце",
   "returning_user_q": "Корисник Повратник?",
   "reward_recipient": "Ревард Реципиент",
   "same_out": "Исти износ",
