--- a/web/angular-wallet/src/locales/tr.json
+++ b/web/angular-wallet/src/locales/tr.json
@@ -783,6 +783,7 @@
   "repeat": "Tekrarla",
   "request_burst": "Request BURST",
   "request_processing_time": "İşlem Süresi İste",
+  "reset_recipients": "Alıcıları Sıfırla",
   "returning_user_q": "Returning User?",
   "reward_recipient": "Ödül Alıcısı",
   "same_out": "Aynı Tutar",
