--- a/web/angular-wallet/src/locales/uk.json
+++ b/web/angular-wallet/src/locales/uk.json
@@ -783,6 +783,7 @@
   "repeat": "Повторити",
   "request_burst": "Request BURST",
   "request_processing_time": "Час обробки запиту",
+  "reset_recipients": "Скинути одержувачів",
   "returning_user_q": "Зареєстрований Користувач?",
   "reward_recipient": "Одержувач нагороди",
   "same_out": "Така ж сума",
