--- a/web/angular-wallet/src/locales/zh-tw.json
+++ b/web/angular-wallet/src/locales/zh-tw.json
@@ -783,6 +783,7 @@
   "repeat": "重復",
   "request_burst": "Request BURST",
   "request_processing_time": "请求处理时间",
+  "reset_recipients": "重置收件人",
   "returning_user_q": "返回的用戶？",
   "reward_recipient": "奖励收件人",
   "same_out": "相同数量",
