feat(mobile): update usd price in header

--- a/mobile/src/translations/en.json
+++ b/mobile/src/translations/en.json
@@ -81,6 +81,10 @@
       "BURST": {
         "name": "BURST",
         "value": "{{value}} BURST"
+      },
+      "USD": {
+        "name": "USD",
+        "value": "{{value}} USD"
       }
     },
     "dates": {
