--- a/mobile/src/translations/ru.json
+++ b/mobile/src/translations/ru.json
@@ -80,6 +80,10 @@
       "BURST": {
         "name": "BURST",
         "value": "{{value}} BURST"
+      },
+      "USD": {
+        "name": "USD",
+        "value": "{{value}} USD"
       }
     },
     "dates": {
